--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@koa/cors": "^3.1.0",
     "@koa/router": "^9.4.0",
     "@types/node": "^14.14.2",
+    "bcrypt": "^5.0.0",
     "boom": "^7.3.0",
     "config": "^3.3.2",
     "dayjs": "^1.9.4",
