--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bcrypt": "^5.0.0",
     "boom": "^7.3.0",
     "config": "^3.3.2",
+    "cron": "^1.8.2",
     "dayjs": "^1.9.4",
     "joi": "^17.3.0",
     "joigoose": "^8.0.0",
@@ -43,6 +44,7 @@
     "mongoose": "^5.10.10",
     "nanoid": "^3.1.16",
     "rand-token": "^1.0.1",
+    "uniqid": "^5.2.0",
     "utility-types": "^3.10.0",
     "winston": "^3.3.3",
     "winston-console-format": "^1.0.8"
