--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "mongoose": "^5.10.10",
     "nanoid": "^3.1.16",
     "rand-token": "^1.0.1",
+    "typescript": "^4.1.3",
     "uniqid": "^5.2.0",
     "utility-types": "^3.10.0",
     "winston": "^3.3.3",
