--- a/package.json
+++ b/package.json
@@ -27,22 +27,26 @@
   "dependencies": {
     "@koa/cors": "^3.1.0",
     "@koa/router": "^10.0.0",
+    "@types/cron": "^1.7.2",
     "@types/node": "^14.14.12",
+    "async-redis": "^1.1.7",
     "config": "^3.3.3",
+    "cron": "^1.8.2",
     "dayjs": "^1.9.7",
+    "jest": "^26.6.3",
     "koa": "^2.13.0",
-    "koa-bodyparser": "^4.3.0",
-    "koa-compress": "^5.0.1",
-    "koa-helmet": "^6.0.0",
-    "koa-json": "^2.0.2",
-    "koa-jwt": "^4.0.0",
     "koa-logger": "^3.2.1",
-    "koa-requestid": "^2.1.0",
     "lodash": "^4.17.20",
-    "mongodb": "^3.6.3",
-    "mongoose": "^5.11.7",
+    "mongodb": "^3.6.2",
+    "mongoose": "^5.10.11",
+    "socket.io": "^2.3.0",
+    "ts-jest": "^26.4.4",
     "typescript": "^4.1.3",
+    "uniqid": "^5.2.0",
     "winston": "^3.3.3",
     "winston-console-format": "^1.0.8"
+  },
+  "devDependencies": {
+    "@types/socket.io": "^2.1.12"
   }
 }
